--- a/Dung-TinTuc/muctintuc/baitaplon.css
+++ b/Dung-TinTuc/muctintuc/baitaplon.css
@@ -204,3 +204,8 @@ body{
     #scrollToTop:hover {
         opacity: 1;
     }
+    .tudongchat-icon {
+        bottom: 200px !important; /* Dời nút lên 60px */
+        right: 0px !important; /* Vị trí cách mép phải */
+        
+    }
